# SystemMonitor

./: .gitignore  .trigger-workflow  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_LOGGING_README.md  CMakeLists.txt  DATE_ROTATION_README.md  OOP_CONVERSION_SUMMARY.md  PROJECT_STATUS.md  README.md  SystemMonitor.bat  SystemMonitor.cfg  build-ci.bat  build.bat  cleanup-workflows.ps1  generate-release.ps1  main.cpp  release.bat  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build-release-v2.yml  build-release.yml  build-release.yml.backup  build-status.yml  generate-release.ps1
config/: SystemMonitor.cfg.email-sample  SystemMonitor.cfg.sample  SystemMonitor.cfg.template
doc/: EMAIL_ALERTS_README.md  LOG_ROTATION_README.md  OOP_CONVERSION_SUMMARY.md  OOP_README.md  PROJECT_STRUCTURE.md  RECOVERY_ALERTS_README.md
docs/: BUILD_CONFIGURATION.md  RELEASE_MANAGEMENT.md  TECHNICAL_DOCUMENTATION.md
include/: Configuration.h  ConsoleDisplay.h  EmailNotifier.h  EmailNotifier_v2.h  Logger.h  ProcessManager.h  SystemInfo.h  SystemMetrics.h  SystemMonitor.h
log/: .gitkeep
scripts/: prepare-release.bat
src/: Configuration.cpp  ConsoleDisplay.cpp  EmailNotifier.cpp  Logger.cpp  ProcessManager.cpp  SystemInfo.cpp  SystemMetrics.cpp  SystemMonitor.cpp
tests/: README.md
tests/essential/: README.md  build_tests.bat  config_email_test.cpp  integration_status.cpp  libcurl_email_test.cpp  run_essential_tests.bat
